# intro-hpc

./: .gitignore  791531.err  791531.out  CLAUDE.md  NIX.md  PLAN.md  README.md  chameleon-runtimes.slurm  chameleon.nix  chameleon.patch  chameleon_parsec_cuda.nix  doe_block_size.csv  doe_n_size_poti.csv  doe_n_size_tupi.csv  doe_traces_poti.csv  doe_traces_tupi.csv  flake.nix  graficos.md  justfile  out.xml  parsec.nix  parsec.patch  parsec_cuda.nix  parsec_cuda_arch.patch  starvz_config.yaml
.zed/: settings.json
chameleon/: .gitlab-ci-env.sh  .gitlab-ci.yml  CMakeLists.txt  ChangeLog  LICENCE.txt
chameleon/.gitlab/: Dockerfile  Dockerfile-pages  bench_plafrim.yml  build.sh  build.yml  common.yml  coverage.yml  coverity.yml  docker.yml  guix-channels-cuda-mkl.scm  guix-channels-hip-rocm.scm  pages.yml  preliminary.yml  release.yml  sbatch.sh  sonarqube.yml  test.sh  test_hmat.yml  test_openmp.yml  test_parsec.yml  test_quark.yml  test_starpu.yml  test_starpu_plafrim.yml  test_starpu_simgrid.yml
chameleon/cmake_modules/: CHAMELEONConfig.cmake.in  ChameleonPkgConfig.cmake  PrintOpts.cmake  gitlab-ci-initial-cache.cmake  local_subs.py
chameleon/compute/: CMakeLists.txt  gepdf.h  map.c  mapv.c  pmap.c  pzbcast.c  pzcesca.c  pzgebrd.c  pzgelqf.c  pzgelqf_param.c  pzgelqfrh.c  pzgemm.c  pzgenm2.c  pzgepdf_qdwh.c  pzgepdf_qr.c  pzgeqrf.c  pzgeqrf_param.c  pzgeqrfrh.c  pzgered.c  pzgerst.c  pzgetrf.c  pzgetrf_incpiv.c  pzgetrf_nopiv.c  pzgram.c  pzhemm.c  pzher2k.c  pzhered.c  pzherk.c  pzhetrd_he2hb.c  pzlacpy.c  pzlag2c.c  pzlange.c  pzlansy.c  pzlascal.c  pzlaset.c  pzlaset2.c  pzlaswp.c  pzlaswpc.c  pzlatms.c  pzlatro.c  (+118 more)
chameleon/control/: CMakeLists.txt  async.c  async.h  auxiliary.c  auxiliary.h  lamch.c  (+22 more)
chameleon/coreblas/eztrace_module/: CMakeLists.txt  core.c  core_z.c  core_zc.c  tcore.c  tcore_z.c  tcore_zc.c
chameleon/example/link_chameleon/: CMakeLists.txt  link_chameleon.c  link_chameleon.cpp  link_chameleon.f90
chameleon/gpucublas/: CMakeLists.txt
chameleon/gpucublas/compute/: CMakeLists.txt  cuda_dlag2h.cu  cuda_gemmex.c  cuda_hgemm.c  cuda_htile.c  cuda_htile_empty.c  cuda_zctile.c  cuda_zctile_empty.c  cuda_zgeadd.c  cuda_zgelqt.c  cuda_zgemerge.c  cuda_zgemm.c  cuda_zgeqrt.c  cuda_zgessm.c  cuda_zgetrf.c  cuda_zhemm.c  cuda_zher2k.c  cuda_zherfb.c  cuda_zherk.c  cuda_zlacpy.cu  cuda_zlag2c.cu  cuda_zlarfb.c  cuda_zlaset.cu  cuda_zlatro.cu  cuda_zlauum.c  cuda_zparfb.c  cuda_zpotrf.c  cuda_zssssm.c  cuda_zsymm.c  cuda_zsyr2k.c  cuda_zsyrk.c  cuda_ztile.c  cuda_ztile_empty.c  cuda_ztpmlqt.c  cuda_ztpmqrt.c  cuda_ztrmm.c  cuda_ztrsm.c  cuda_ztrtri.c  cuda_ztslqt.c  cuda_ztsmlq.c  (+8 more)
chameleon/gpucublas/eztrace_module/: CMakeLists.txt  gpucublas.c  gpucublas_h.c  gpucublas_z.c  gpucublas_zc.c
chameleon/gpucublas/include/: CMakeLists.txt  gpucublas.h.in
chameleon/gpucublas/include/gpucublas/: gpucublas_z.h  gpucublas_zc.h  gpucublas_zctile.h  gpucublas_ztile.h
chameleon/runtime/starpu/: CMakeLists.txt
chameleon/runtime/starpu/codelets/: codelet_binit.c  codelet_convert.c  codelet_dlag2h.c  codelet_dlag2z.c  codelet_dzasum.c  codelet_gemm.c  codelet_gemmex.c  codelet_hgemm.c  codelet_ipiv.c  codelet_map.c  codelet_zaxpy.c  codelet_zcallback.c  codelet_zccallback.c  codelet_zcesca.c  codelet_zgeadd.c  codelet_zgelqt.c  codelet_zgemm.c  codelet_zgemv.c  codelet_zgeqrt.c  codelet_zgered.c  codelet_zgerst.c  codelet_zgersum.c  codelet_zgessm.c  codelet_zgessq.c  codelet_zgesum.c  codelet_zgetrf.c  codelet_zgetrf_batched.c  codelet_zgetrf_blocked.c  codelet_zgetrf_blocked_trsm.c  codelet_zgetrf_incpiv.c  codelet_zgetrf_nopiv.c  codelet_zgetrf_nopiv_percol.c  codelet_zgetrf_percol.c  codelet_zgram.c  codelet_zhe2ge.c  codelet_zhemm.c  codelet_zher2k.c  codelet_zherfb.c  codelet_zherk.c  codelet_zhessq.c  (+46 more)
chameleon/runtime/starpu/control/: runtime_async.c  runtime_context.c  runtime_control.c  runtime_descriptor.c  runtime_ipiv.c  runtime_options.c  runtime_perm.c  runtime_pivot.c  runtime_profiling.c  runtime_tags.c  runtime_workspace.c  runtime_zlocality.c  runtime_zprofiling.c
chameleon/runtime/starpu/include/: cham_tile_interface.h  chameleon_starpu.h.in  chameleon_starpu_internal.h  cppi_interface.h  cpui_interface.h  runtime_codelet_profile.h  runtime_codelet_z.h  runtime_codelet_zc.h  runtime_codelets.h  runtime_mpi.h  runtime_profiling.h  runtime_rectasks.h  runtime_wontuse.h  runtime_workspace.h
chameleon/runtime/starpu/interface/: cham_tile_interface.c  cppi_interface.c  cpui_interface.c
docs/: analise_escalonadores_gpu.md  analise_paineis_runtime.md  cuda_parsec.md  escalonadores_parsec.md  parsec_cuda_results.md  plano_experimentos_gpu.md  por_que_gd_vence.md  starvz_e_captura_parsec.md  transferencias_h2d_d2h.md  variancia_parsec_gpu.md
docs_pcad/: pcad.md
final/: README.md  doe_gpu_n_size_poti.r  doe_gpu_n_size_tupi.r  doe_gpu_sched.r  doe_gpu_tile.r  doe_gpu_tile_ext.r  doe_gpu_tile_ext_tupi.csv  doe_gpu_trace_ideal.r  doe_gpu_trace_ideal_poti.csv  gpu_doe_sweep.sh  gpu_tile_ext_poti.slurm  gpu_tile_ext_tupi.slurm  gpu_tile_poti.slurm  gpu_tile_tupi.slurm  gpu_trace_ideal_poti.slurm  gpu_trace_ideal_tupi.slurm  gpu_traces_poti.slurm  run_gpu_sched.sh
paper/: default.nix  export.el  flake.nix  refs.bib  sbc-template.sty  sbc.org
parsec/: CMakeLists.txt
patches/: chameleon.patch  parsec.patch
plots/: bounds_summary.csv  sched_ready_summary.csv  task_times_summary.csv  wait_time_summary.csv
sbc/: refs.bib  relatorio.tex
scripts/: capture_parsec_dag.sh  collect_traces_manual.sh  doe.py  doe_block_size.r  doe_n_size.r  doe_traces.r  gpu_doe_sweep.sh  gpu_sweep.sh  plot.py  plot_block_size.r  plot_n_size.r  repro_segfault_inner.sh  run.sh  run_cuda_vscpu.sh  run_gpu_sched.sh  run_local_gpu_compare.sh  sync_to_pcad.sh
slides/: part1.md
slurm/: block_size.slurm  block_size_poti.slurm  block_size_tupi.slurm  compile_starpu_cuda.slurm  cuda_vs_cpu.slurm  full_trace.slurm  gpu_phases.slurm  n_size.slurm  n_size_poti.slurm  n_size_tupi.slurm  parsec_dag.slurm  repro_segfault.slurm  traces.slurm  traces_poti.slurm  traces_tupi.slurm
(+935 files in other folders)
